<resources>
    <string name="app_name">maeari for misodiary</string>
    <string name="title_home">OPEN CHANNEL</string>
    <string name="navtitle_opench">OPENCH.</string>
    <string name="navtitle_michinrandom">FIND FRIENDS</string>
    <string name="navtitle_profile">DAYTIME</string>
    <string name="title_opench">OPENCH.</string>
    <string name="title_michinrandom">FIND FRIENDS</string>
    <string name="title_profile">DAYTIME</string>
    <string name="title_today">MY TODAY</string>
    <string name="title_food">FOODS</string>
    <string name="menu_description_search">Search</string>
    <string name="menu_description_noti">Notifications</string>
    <string name="menu_description_myaccount">My Account</string>
    <string name="menu_description_appinfo">About this app</string>
    <string name="title_appinfo">About</string>
    <string name="app_logo">App Logo</string>
    <string name="version_string">Cleanboot+</string>
    <string name="app_info_notice">This Application uses open-source software. You can see license informations from below link.</string>
    <string name="app_info_notice2">This Application uses HANNA Air fonts published by Wooahhan Brothers.</string>
    <string name="string_osc">OPEN SOURCE LICENSE</string>
    <string name="string_maeari">VISIT maeari PROJECT</string>
    <string name="string_misod">VISIT misodiary WEBSITE</string>
    <string name="error1">Failed to create an image.</string>
    <string name="title_noti">Notifications</string>
    <string name="title_single_post">Post</string>
    <string name="title_my_account">My Account</string>
    <string name="back">Back</string>
    <string name="search_hint">Search in Misodiary</string>
    <string name="requestPermission">Request Permissions</string>
    <string name="welcome">WELCOME TO \n maeari for misodiary</string>
    <string name="requestPermissionDesc1">maeari for misodiary requests some permissions to take a picture and upload directly. \n Even you disagreed this request, you can upload your image from Gallery.</string>
    <string name="ImageCapture">Take a Photo</string>
    <string name="requestPermissionItem1">Storage</string>
    <string name="requestPermissionItem1Desc">To save your taken photo temporary.</string>
    <string name="requestPermissionItem2">Camera</string>
    <string name="requestPermissionItem2Desc">To capture directly.</string>
    <string name="start_button">Start App</string>
    <string name="requestPermissionDesc">After denying these permissions, you can agree them in App info - Permissions. \n If you don\'t agree all of them, function that takes photo could not work properly or Application crashes.</string>
    <string name="error2">Failed to load Search result.</string>
    <string name="title_profileview">Profile</string>
    <string name="notification_error_ssl_cert_invalid">SSL Error</string>
    <string name="notification_error_ssl_authority_untrusted">This is an error because misodiary uses Let\'s Encrypt for their server certification.</string>
    <string name="notification_error_ssl_cert_expired">SSL Certification has been expired. Please Contact to misodiary server operator.</string>
    <string name="notification_error_ssl_hostname_invalid">Invalid Hostname. Please check your AP or internet if they are hacked.</string>
    <string name="notification_error_ssl_time_yet">SSL Certification is not yet valid. Please check if your clock is unmatched with internet clock.</string>
    <string name="continue_anyway">Continue Anyway?</string>
    <string name="error_continue">Continue</string>
    <string name="error_cancel">Cancel</string>
    <string name="error_back">Press Back Button Once Again to exit App.</string>
    <string name="login_title">Login to misodiary</string>
    <string name="login_btn">Login</string>
    <string name="logout">Logout</string>
    <string name="misoid">ID</string>
    <string name="misopw">Password</string>
    <string name="misoautologin">Auto Login</string>
    <string name="misofindidpw">I forgot my password or ID.</string>
    <string name="misoRegister">Register</string>
    <string name="loginprevious">Login as WebView(OLD)</string>
    <string name="loginnew">Try new Login screen</string>
    <string name="loginIDlength">You must type 3 to 16 characters in this field.</string>
    <string name="loginPWlength">You must type 8 to 18 characters in this field.</string>
    <string name="loginfirstchar">You must use alphabet in the first letter.</string>
    <string name="loginIDAllowchar">You can use alphabet, number, _ in this field.</string>
    <string name="loginPWAllowchar">You can use alphabet, number, !@#$%^&amp;*() in this field.</string>
    <string name="loginNoAccount">Account is not existed.</string>
    <string name="loginresetpw">Reset your password first.</string>
    <string name="loginFailed">Please check what you typed.</string>
    <string name="error">Error</string>
    <string name="value_missing">Some values are missing. Please check again.</string>
    <string name="btn_write">Post Something</string>
    <string name="agree_content_1">I agree to maeari for misodiary privacy policy, misodiary terms of service and privacy policy to use this app.</string>
    <string name="agree_content_2">Privacy Policy and Terms of Service</string>
    <string name="check_agree">Please Agree to Privacy Policy by maeari for misodiary.</string>
    <string name="mfm_pp">maeari for misodiary Privacy Policy</string>
    <string name="ms_pp">misodiary Privacy Policy</string>
    <string name="ms_tos">misodiary Terms of Service</string>
    <string name="ver_vcode" translatable="false">%1$s %2$s</string>
    <string name="debug_info" translatable="false">%1$s \n %2$s %3$s \n BUILD: %4$d MODE: %5$s</string>
    <string name="setting_account">Account Settings</string>
    <string name="setting_mainsc">Home Screen</string>
    <string name="setting_appsetting">App Settings</string>
    <string name="setting_cachedelete">Delete Cache</string>
    <string name="setttng_autodelcache">Delete Cache when exits App</string>
    <string name="title_help">Help</string>
    <string name="agreement">Agreements and Polices</string>
    <string name="mfmagreelink">https://latios.pbdiary.pw/maeari/misodiary/privacypolicy_en.html</string>
    <string name="noInternetConnection">No Internet Connection</string>
    <string name="loginSetting">Login Settings</string>
    <string name="loginAutofillOption">AutoFill Support(BETA)</string>
    <string name="error_failed_del_cache">Failed to delete cache</string>
    <string name="string_cache_deleted">Deleted</string>
    <string name="string_darkmode_title">Dark Mode Setting</string>
    <string name="setting_darkmode_light">Light</string>
    <string name="setting_darkmode_dark">Dark</string>
    <string name="setting_darkmode_bs">Set by Battery Saver</string>
</resources>
