<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/setting_account">
        <Preference
            android:title="@string/title_my_account">
            <intent
                android:targetPackage="pw.pbdiary.maeari.misodiary"
                android:targetClass="pw.pbdiary.maeari.misodiary.MyAccountActivity" />
        </Preference>
        <!-- <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="autologin"
            android:enabled="false"
            android:title="@string/misoautologin" /> -->
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/loginSetting">
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="autofill"
            android:enabled="true"
            android:title="@string/loginAutofillOption" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/setting_appsetting">
        <ListPreference
            android:key="screendefault"
            android:entries="@array/array_prefersc"
            android:entryValues="@array/array_prefsc"
            android:defaultValue="opench"
            android:title="@string/setting_mainsc" />
        <ListPreference
            android:key="darkModeSet"
            android:entries="@array/array_darkmode"
            android:entryValues="@array/array_darkmode_internal"
            android:defaultValue="bs"
            android:title="@string/string_darkmode_title" />
        <Preference
            android:title="@string/setting_cachedelete"
            android:key="deleteCache"/>
        <!-- <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="autodeletecache"
            android:enabled="false"
            android:title="setttng_autodelcache" /> -->
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_help">
        <Preference android:title="@string/title_appinfo">
            <intent
                android:targetPackage="pw.pbdiary.maeari.misodiary"
                android:targetClass="pw.pbdiary.maeari.misodiary.AppInfoActivity" />
        </Preference>
        <Preference android:title="@string/agree_content_2">
            <intent
                android:targetPackage="pw.pbdiary.maeari.misodiary"
                android:targetClass="pw.pbdiary.maeari.misodiary.AgreementActivity" />
        </Preference>
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>