<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/nav_opench"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:fontFamily="@font/bmhanna_air_ttf"
        android:title="@string/navtitle_opench"/>

    <item
        android:id="@+id/nav_michinrandom"
        android:icon="@drawable/ic_new_releases_black_24dp"
        android:fontFamily="@font/bmhanna_air_ttf"
        android:title="@string/navtitle_michinrandom" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:fontFamily="@font/bmhanna_air_ttf"
        android:title="@string/navtitle_profile" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout_black_24px"
        android:fontFamily="@font/bmhanna_air_ttf"
        android:title="@string/logout" />
    <item
        android:id="@+id/nav_appinfo"
        android:icon="@drawable/ic_info_outline_black_24dp"
        android:fontFamily="@font/bmhanna_air_ttf"
        android:title="@string/title_appinfo" />

</menu>
