<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AppInfoActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/app_logo"
        android:cropToPadding="false"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/bmjua_ttf"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/bmjua_ttf"
        android:text="@string/version_string"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/app_info_notice2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/bmjua_ttf"
        android:text="@string/app_info_notice" />

    <Button
        android:id="@+id/goopenlicense"
        style="@android:style/Widget.Material.Button.Borderless.Colored"
        android:onClick="onOSLClicked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bmjua_ttf"
        android:text="@string/string_osc" />

    <Button
        android:id="@+id/gomaeariproject"
        style="@android:style/Widget.Material.Button.Borderless.Colored"
        android:onClick="onMaeariClicked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bmjua_ttf"
        android:text="@string/string_maeari" />

    <Button
        android:id="@+id/gomisodproject"
        style="@android:style/Widget.Material.Button.Borderless.Colored"
        android:onClick="onMisoClicked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bmjua_ttf"
        android:text="@string/string_misod" />
</LinearLayout>